# MushroomDNResolver

./: Cargo.toml  README.md  dns.service
src/: lookup.rs  main.rs  server.rs
src/authority/: auth_lookup.rs  authority.rs  authority_object.rs  catalog.rs  error.rs  message_request.rs  message_response.rs  mod.rs  mushroom.rs
src/error/: config_error.rs  persistence_error.rs
src/server/: h2_handler.rs  h3_handler.rs  quic_handler.rs  request_handler.rs  response_handler.rs  server_future.rs
src/store/blocklist/: authority.rs
src/store/file/: authority.rs
src/store/forwarder/: authority.rs
src/store/in_memory/: authority.rs
src/store/recursor/: authority.rs  config.rs
src/store/sqlite/: authority.rs  persistence.rs
