[package]
name = "mushroom-dnresolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = "4.5.21"
hickory-proto = { version = "0.25.0-alpha.3", features = ["text-parsing"] }
hickory-resolver = { version = "0.25.0-alpha.3", features = ["dns-over-quic", "dns-over-tls", "dns-over-rustls", "native-certs", "dns-over-https-rustls", "dns-over-h3"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.12"
ipnet = "2.10.1"
futures-util = "0.3.31"
tracing = "0.1.40"
prefix-trie = "0.5.1"
async-trait = "0.1.83"
socket2 = "0.5.7"
cfg-if = "1.0.0"
enum-as-inner = "0.6.1"
thiserror = "2.0.3"
futures-executor = "0.3.31"
tracing-subscriber = "0.3.18"
sd-notify = "0.4.3"
networkmanager = "0.4.1"
dbus = "0.9.7"
sysctl = "0.6.0"
